[ADD/FIX][9.0][TASK_ID:732]FoodCoops:Add Total field for no of packages ordered for products

--- a/intercoop_addons/purchase_compute_order/views/view.xml
+++ b/intercoop_addons/purchase_compute_order/views/view.xml
@@ -50,8 +50,13 @@
                         </group>
                     </group>
                     <group string="Result" col="6">
-                        <field name="computed_amount"/>
-                        <field name="computed_duration"/>
+                        <group>
+                            <field name="computed_amount"/>
+                            <field name="package_qty_count"/>
+                        </group>
+                        <group>
+                            <field name="computed_duration"/>
+                        </group>
                     </group>
                     <notebook colspan="4">
                         <page name="orderlines" string="Order lines">
